adding more icon data (for more devices).  Also updating some wording.

--- a/404.html
+++ b/404.html
@@ -5,7 +5,14 @@
         <meta charset="utf-8">
         <meta name="Description" content="Jedi Knight Galaxies 404 Not Found Error.">
         <meta name="Copyright" content="Jedi Knight Galaxies Team">
-        <link rel="icon" href="https://www.jkgalaxies.net/images/JKG_logo-inverted.ico" type="image/x-icon">
+        <link rel="icon" href="images/JKG_logo-inverted.ico" type="image/x-icon">
+        <link rel="apple-touch-icon-precomposed" href="images/JKG_logo-inverted.png">
+        <link rel="icon" type="image/png" href="images/JKG_logo-inverted-64x64.png" sizes="64x64">
+        <link rel="icon" type="image/png" href="images/JKG_logo-inverted-32x32.png" sizes="32x32">
+        <link rel="icon" type="image/png" href="images/JKG_logo-inverted-16x16.png" sizes="16x16">
+        <meta name="msapplication-TileColor" content="#010412">
+        <meta name="msapplication-TileImage" content="images/JKG_logo-inverted-144x144.png">
+        
         <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
         <link rel="stylesheet" href="https://www.jkgalaxies.net/styles.css">
     </head>
