--- a/about.html
+++ b/about.html
@@ -3,13 +3,20 @@
     <head>
         <title>About JKG</title>
         <meta charset="utf-8">
-        <meta name="Description" content="Jedi Knight Galaxies, a mod for Jedi Academy.">
+        <meta name="Description" content="Jedi Knight Galaxies, a mod for Jedi Academy.  Jedi Knight Galaxies is a competitive and innovative multiplayer shooter, played out in the Star Wars universe.  Learn more here.">
         <meta name="Copyright" content="Jedi Knight Galaxies Team">
         <meta name="Keywords" content="JKG, Jedi Knight Galaxies, jkagalaxies, jkgalaxies, jedi knight, game, star wars, star wars online, star wars multiplayer, star wars multiplayer game, star wars game, star wars mod">
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <meta name="Language" content="English">
 
         <link rel="icon" href="images/JKG_logo-inverted.ico" type="image/x-icon">
+        <link rel="apple-touch-icon-precomposed" href="images/JKG_logo-inverted.png">
+        <link rel="icon" type="image/png" href="images/JKG_logo-inverted-64x64.png" sizes="64x64">
+        <link rel="icon" type="image/png" href="images/JKG_logo-inverted-32x32.png" sizes="32x32">
+        <link rel="icon" type="image/png" href="images/JKG_logo-inverted-16x16.png" sizes="16x16">
+        <meta name="msapplication-TileColor" content="#010412">
+        <meta name="msapplication-TileImage" content="images/JKG_logo-inverted-144x144.png">
+        
         <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" integrity="sha384-JcKb8q3iqJ61gNV9KGb8thSsNjpSL0n8PARn9HuZOnIxN0hoP+VmmDGMN5t9UJ0Z" crossorigin="anonymous">
         <link rel="stylesheet" href="styles.css">
     </head>
