--- a/index.html
+++ b/index.html
@@ -4,14 +4,21 @@
         <title>Jedi Knight Galaxies</title>
 
         <meta charset="utf-8">
-        <meta name="Description" content="Jedi Knight Galaxies, a mod for Jedi Academy.">
+        <meta name="Description" content="Jedi Knight Galaxies, a free open-source mod for Jedi Academy.  Enjoy a fast paced, 1st Person/3rd Person cooperative shooter, with Roleplaying elements and PVP.  News page.">
         <meta name="Copyright" content="Jedi Knight Galaxies Team">
-        <meta name="Keywords" content="JKG, Jedi Knight Galaxies, jkagalaxies, jkgalaxies, jedi knight, game, star wars, star wars online, star wars multiplayer, star wars multiplayer game, star wars game, star wars mod, Jedi Academy, jk3, JKA, jedi academy total conversion mod, total conversion mod">
+        <meta name="Keywords" content="JKG, Jedi Knight Galaxies, jkagalaxies, jkgalaxies, jedi knight, game, jedi academy mod, star wars, star wars online, star wars multiplayer, star wars multiplayer game, star wars game, star wars mod, Jedi Academy, jk3, JKA, JKG, jedi academy total conversion mod, total conversion mod">
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <meta name="Language" content="English">
 		<meta name="google-site-verification" content="4DOJbomq9y00AL8HF-t8-JMZ66JHltuDpvhGTChLak4" />
 
         <link rel="icon" href="images/JKG_logo-inverted.ico" type="image/x-icon">
+        <link rel="apple-touch-icon-precomposed" href="images/JKG_logo-inverted.png">
+        <link rel="icon" type="image/png" href="images/JKG_logo-inverted-64x64.png" sizes="64x64">
+        <link rel="icon" type="image/png" href="images/JKG_logo-inverted-32x32.png" sizes="32x32">
+        <link rel="icon" type="image/png" href="images/JKG_logo-inverted-16x16.png" sizes="16x16">
+        <meta name="msapplication-TileColor" content="#010412">
+        <meta name="msapplication-TileImage" content="images/JKG_logo-inverted-144x144.png">
+
         <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" integrity="sha384-JcKb8q3iqJ61gNV9KGb8thSsNjpSL0n8PARn9HuZOnIxN0hoP+VmmDGMN5t9UJ0Z" crossorigin="anonymous">
         <link async rel="stylesheet" href="styles.css">
     </head>
@@ -33,7 +40,7 @@
         <h1>Welcome</h1>
             <p id="welcomemsg"> <!--Note: this is dynamically loadable, but since we keep this static default text here in case they've got javascript disabled-->
             Either by luck, or wisdom, you've arrived at the website of the biggest, most extensive and evolving mod ever made for a Star Wars game. Welcome to choices, welcome to adventures! Welcome; to Jedi Knight Galaxies, a free modification for Ravensoft’s Q3-based game, <a href="https://en.wikipedia.org/wiki/Star_Wars_Jedi_Knight:_Jedi_Academy">Jedi Knight: Jedi Academy</a>.<br><br>
-            With new models, animations, maps, music, and naturally including an all new exciting plotline, all backed up by extreme amounts of coding. As far as a total conversion goes, we prefer to call JKG a game, more than a mod. Except for the fact that we want to bring you all this, completely free of charge!<br><br>
+            With new models, animations, maps, music, and naturally including an all new exciting plotline, all backed up by extreme amounts of coding. As far as a total conversion goes, we prefer to call JKG a game, more than just a Jedi Academy mod. Except for the fact that we want to bring you all this, completely free of charge!<br><br>
             Welcome to Jedi Knight Galaxies, where we break the limits!</p>
             <p><a href="about.html">Learn more...</a></p>
         </div>
