--- a/update.index.html
+++ b/update.index.html
@@ -5,7 +5,15 @@
     <title>Jedi Knight Galaxies - Updates</title>
     <meta charset="utf-8">
     <meta name="Description" content="Jedi Knight Galaxies, version check.">
+
     <link rel="icon" href="images/JKG_logo-inverted.ico" type="image/x-icon">
+    <link rel="apple-touch-icon-precomposed" href="images/JKG_logo-inverted.png">
+    <link rel="icon" type="image/png" href="images/JKG_logo-inverted-64x64.png" sizes="64x64">
+    <link rel="icon" type="image/png" href="images/JKG_logo-inverted-32x32.png" sizes="32x32">
+    <link rel="icon" type="image/png" href="images/JKG_logo-inverted-16x16.png" sizes="16x16">
+    <meta name="msapplication-TileColor" content="#010412">
+    <meta name="msapplication-TileImage" content="images/JKG_logo-inverted-144x144.png">
+    
     <link rel="stylesheet" href="styles.css">
     
     <script src="https://code.jquery.com/jquery-3.5.1.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
