grammar/spelling fixes and news feed update

--- a/faq.html
+++ b/faq.html
@@ -106,7 +106,7 @@
         <div class="maindiv">
             <h2>What time period is JKG set in?</h2>
             <p>
-                JKG is set in the time after Episode 3 and before Episode 6 at a currently vague date. Due to the presence of character models from base JKA it fits in around Episode 5 however the goal is to take place in and around the Dark Forces timeline, before Episode IV: A New Hope.  JKG has its own canon to give ourselves creative freedom, but generally anything that occured in the Prequel Trilogy or Original Trilogy movies (1-6) is considered canon, other material official Disney canon, extended universe, or otherwise may or may not be included.
+                JKG is set in the time after Episode 3 and before Episode 6 at a currently vague date. Due to the presence of character models from base JKA it fits in around Episode 5 however the goal is to take place in and around the Dark Forces timeline, before Episode IV: A New Hope.  JKG has its own canon to give ourselves creative freedom, but generally anything that occurred in the Prequel Trilogy or Original Trilogy movies (1-6) is considered canon, other material official Disney canon, extended universe, or otherwise may or may not be included.
             </p>
         </div>
 
@@ -178,7 +178,7 @@
 
         <div class="maindiv">
             <h2>What happened to jkgalaxies.com?</h2>
-            <p>Unfortunately, the domain expired and was bought out by a domain name troll/cybersquatter before we could aquire it from the original owner, Jake.  It is now marked up considerably and in the hands of a domain name retailer who has no intention of parting with it cheaply.  The site also fell into disrepair prior to that point, due to the annoyance of updating it constantly (we used Wordpress back then) and dealing with constant bot attacks.  At that point, the domain name expired.
+            <p>Unfortunately, the domain expired and was bought out by a domain name troll/cybersquatter before we could acquire it from the original owner, Jake.  It is now marked up considerably and in the hands of a domain name retailer who has no intention of parting with it cheaply.  The site also fell into disrepair prior to that point, due to the annoyance of updating it constantly (we used Wordpress back then) and dealing with constant bot attacks.  At that point, the domain name expired.
             </p>
         </div>
 
