adding socialmedia icons to about page, and a test steam_sale script (we probably can't use it with github pages due to cross site restriction policies from Steam's end of things.  Maybe could use a proxy, but...might as well just get a server at that point.

--- a/about.html
+++ b/about.html
@@ -274,6 +274,17 @@
               </div>
               <!--/.Carousel Wrapper-->
         </div>
+
+        <div class="centerdiv" id="media-links">
+            <p> 
+                <a href="https://discord.gg/YuG8Zks" title="Join the Jedi Knight Galaxies Discord server." target="_blank"><img src="images/media_icons/Discord-Mark-64px.png" alt="Jedi Knight Galaxies Discord" /></a> &emsp;
+                <a href="https://www.youtube.com/channel/UCnnAUSngUk8l3fycYMVXkKQ" title="Watch Jedi Knight Galaxies on YouTube." target="_blank"><img src="images/media_icons/YT-Mark-64px.png" alt="Jedi Knight Galaxies YouTube" /></a> &emsp;
+                <a href="https://github.com/JKGDevs/JediKnightGalaxies" title="View JKG's source code on GitHub." target="_blank"><img src="images/media_icons/GitHub-Mark-Light-64px.png" alt="Jedi Knight Galaxies GitHub" /></a> &emsp;
+                <a href="https://jkhub.org/forum/119-jkgalaxies-news/" title="View Jedi Knight Galaxies Forums on JKHub." target="_blank"><img src="images/media_icons/JKHub-Mark-64px.png" alt="Jedi Knight Galaxies Forums" /></a> &emsp;
+                <a href="https://www.twitch.tv/jkgalaxies" title="Watch Jedi Knight Galaxies on Twitch." target="_blank"><img src="images/media_icons/Twitch-Mark-64px.png" alt="Jedi Knight Galaxies Twitch" /></a> &emsp;
+                <a href="https://www.moddb.com/mods/jkgalaxies" title="View Jedi Knight Galaxies on ModDB". target="_blank"><img src="images/media_icons/ModDB-Mark-64px.png" alt="Jedi Knight Galaxies ModDB" /></a>
+            </p>
+        </div>
         
 
 
