improving custom error pages

--- a/400.html
+++ b/400.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
 <html lang="en-US">
     <head>
-        <title>404 Not Found</title>
+        <title>400 Not Found</title>
         <meta charset="utf-8">
-        <meta name="Description" content="Jedi Knight Galaxies 404 Not Found Error.">
+        <meta name="Description" content="Jedi Knight Galaxies 400 Not Found Error.">
         <meta name="Copyright" content="Jedi Knight Galaxies Team">
         <link rel="icon" href="https://wwww.jkgalaxies.net/images/JKG_logo-inverted.ico" type="image/x-icon">
         <link rel="apple-touch-icon-precomposed" href="https://wwww.jkgalaxies.net/images/images/JKG_logo-inverted.png">
@@ -30,19 +30,21 @@
                 <img src="https://www.jkgalaxies.net/images/jkg-big_logo-inverted-dropshadow.png" class="img-fluid" alt="Jedi Knight Galaxies logo, click to show menu." align="center">
             </div>
         
-            <h1>404 <br> Page Not Found</h1>
+            <h1>400 <br> Bad Request</h1>
             <br>
-
             <div class="centerdiv">
-                <div class="ErrorJoke" id="ErrorJoke">
-                    <h3 id="TextJoke"></h3>
-                    <img id="ImgJoke" src="?" class="img-fluid" alt="Image">
-                </div>
+                Invalid request.
+            </div>
+
+            <div class="ErrorJoke">
+                <h3>Coruscant?  Does not compute.</h3>
+                <img src="https://i.imgur.com/wa8QOZ8.gif" class="img-fluid" alt="Does Not Compute">
+                <br><br>
             </div>
 
 
             <div class="centerdiv">
-                <h5>You tried to visit an invalid page that has either moved, changed names, been deleted, or never existed in the first place.</h5>
+                <h5>You sent a request that was malformed, had syntax errors, invalid framing, or was a deceptive request.</h5>
                 <br>
                 <h5>Visit the <a href = "https://www.jkgalaxies.net/index.html">home page</a> to learn more about Jedi Knight Galaxies.</h5>
                
