--- a/403.html
+++ b/403.html
@@ -43,8 +43,7 @@
         </div>
             
         <div class="centerdiv">
-            <h5>You do not have permission for this request
-                 <!--#echo var="REQUEST_URI" --> .</h5>
+            <h5>You do not have permission for this request.</h5>
             <h5>Visit the <a href="https://www.jkgalaxies.net/index.html">home page</a> to learn more about Jedi Knight
                 Galaxies.</h5>
         </div>
@@ -56,10 +55,11 @@
             </p>
         </div>
 		
-		<script src="https://code.jquery.com/jquery-3.5.1.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
-		<script type="text/javascript">
-        window.jQuery || document.write('\x3Cscript type="text/javascript" src="scripts/jquery-3.5.1.min.js">\x3C/script>');
-		</script>
+        <script src="https://code.jquery.com/jquery-3.6.0.min.js" integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4=" crossorigin="anonymous"></script>
+        <script type="text/javascript">
+            window.jQuery || document.write('\x3Cscript type="text/javascript" src="scripts/jquery-3.6.0.min.js">\x3C/script>');
+        </script>
+        <script async type="text/javascript" src="https://wwww.jkgalaxies.net/scripts/scripts.js"></script>
 		
     </body>
 </html>
