removing extra w that was breaking links on error pages, also removing 404 labelling for non-404 pages

--- a/403.html
+++ b/403.html
@@ -59,7 +59,7 @@
         <script type="text/javascript">
             window.jQuery || document.write('\x3Cscript type="text/javascript" src="scripts/jquery-3.6.0.min.js">\x3C/script>');
         </script>
-        <script async type="text/javascript" src="https://wwww.jkgalaxies.net/scripts/scripts.js"></script>
+        <script async type="text/javascript" src="https://www.jkgalaxies.net/scripts/scripts.js"></script>
 		
     </body>
 </html>
