--- a/400.html
+++ b/400.html
@@ -16,7 +16,7 @@
         <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
         <link rel="stylesheet" href="https://www.jkgalaxies.net/styles.css">
     </head>
-    <body class="404Page">
+    <body class="400Page">
         <div id="navbar">
             <img id="navbarLogoImg" src="https://wwww.jkgalaxies.net/images/jkg_logo-inverted-dropshadow.png" class="img-fluid" alt="Jedi Knight Galaxies" align="right">
             <a href="https://www.jkgalaxies.net/index.html" alt="Go to JKG home page.">Home</a>
@@ -59,6 +59,6 @@
             <script type="text/javascript">
                 window.jQuery || document.write('\x3Cscript type="text/javascript" src="scripts/jquery-3.6.0.min.js">\x3C/script>');
             </script>
-            <script async type="text/javascript" src="https://wwww.jkgalaxies.net/scripts/scripts.js"></script>
+            <script async type="text/javascript" src="https://www.jkgalaxies.net/scripts/scripts.js"></script>
     </body>
 </html>
