--- a/404.html
+++ b/404.html
@@ -57,6 +57,6 @@
             <script type="text/javascript">
                 window.jQuery || document.write('\x3Cscript type="text/javascript" src="scripts/jquery-3.6.0.min.js">\x3C/script>');
             </script>
-            <script async type="text/javascript" src="https://wwww.jkgalaxies.net/scripts/scripts.js"></script>
+            <script async type="text/javascript" src="https://www.jkgalaxies.net/scripts/scripts.js"></script>
     </body>
 </html>
