--- a/404.html
+++ b/404.html
@@ -18,7 +18,7 @@
     </head>
     <body class="404Page">
         <div id="navbar">
-            <img id="navbarLogoImg" src="https://wwww.jkgalaxies.net/images/jkg_logo-inverted-dropshadow.png" class="img-fluid" alt="Jedi Knight Galaxies" align="right">
+            <img id="navbarLogoImg" src="https://www.jkgalaxies.net/images/jkg_logo-inverted-dropshadow.png" class="img-fluid" alt="Jedi Knight Galaxies" align="right">
             <a href="https://www.jkgalaxies.net/index.html" alt="Go to JKG home page.">Home</a>
             <a href="https://www.jkgalaxies.net/download.html" title="Get the game!" alt="Go to JKG download page.">Download</a>
             <a href="https://www.jkgalaxies.net/about.html" title="Learn more about the game." alt="Go to JKG about page.">About</a>
