adding credit link to download page

--- a/download.html
+++ b/download.html
@@ -292,10 +292,20 @@
         </div>
 
         <div class="centerdiv">
-            <p><a href="https://github.com/JKGDevs/JediKnightGalaxies/"><img src="images/media_icons/GitHub-Mark-Light-64px.png"
-                        height="64" width="64" alt="Github Logo" Title="Get the source code on Github."></a></p>
-            <p><a href="https://github.com/JKGDevs/JediKnightGalaxies/" alt="Link to Github Source Code." target="_blank">Source Code on Github</a></p>
-        </div></a>
+            <p Title="Get the source code on Github.">
+                <a href="https://github.com/JKGDevs/JediKnightGalaxies/"><img src="images/media_icons/GitHub-Mark-Light-64px.png"
+                        height="64" width="64" alt="Github Logo" >
+                <br>
+                <br>
+                    Source Code on Github
+                </a>
+            </p>
+            <p Title="Who makes JKG?">
+                <a href="./contributors.html" alt="Link to Contributors">
+                    Credits
+                </a>
+            </p>
+        </div>
     </div>
 
     <div class="copyright">
