--- a/legal.html
+++ b/legal.html
@@ -26,7 +26,7 @@
             <a href="index.html" title="Home page." alt="Go to JKG home page.">Home</a>
             <a href="download.html" title="Get the game!" alt="Go to JKG download page.">Download</a>
             <a href="about.html" title="Learn more about the game." alt="Go to JKG about page.">About</a>
-            <a href="https://dark-clan.servegame.com/serverlist_new/serverlist.html#colGamename=1&colVersion=1&displayFilters=0&autoRefresh=1&jkaversion=1.01&theme=dark&sortReverse=1&serverInfoMode=0&game=jkg&sortBy=humans&filterString=" title="Check server stats, provided by dark-clan.servegame.com" alt="Go to dark-clan.servegame.com's JKG server listing page.">Servers</a>
+            <a href="https://dark-clan.servegame.com/serverlist_new/serverlist.html#autoRefresh=1&theme=dark&game=jkg&sortBy=humans" title="Check server stats, provided by dark-clan.servegame.com" alt="Go to dark-clan.servegame.com's JKG server listing page.">Servers</a>
             <a href="https://jkhub.org/forum/117-jedi-knight-galaxies/" title="Hosted by JKHub.org." alt="Go to JKG Forums, hosted by JKHub.org">Forum</a>
         </div>
         
