--- a/contributors.html
+++ b/contributors.html
@@ -25,6 +25,7 @@
             <a href="index.html" title="Home page." alt="Go to JKG home page.">Home</a>
             <a href="download.html" title="Get the game!" alt="Go to JKG download page.">Download</a>
             <a href="about.html" title="Learn more about the game." alt="Go to JKG about page.">About</a>
+            <a href="contributors.html" title="Who makes the game?" alt="Contributors page.">Credits</a>
             <a href="https://dark-clan.servegame.com/serverlist_new/serverlist.html#autoRefresh=1&theme=dark&game=jkg&sortBy=humans" title="Check server stats, provided by dark-clan.servegame.com" alt="Go to dark-clan.servegame.com's JKG server listing page.">Servers</a>
             <a href="https://jkhub.org/forum/117-jedi-knight-galaxies/" title="Hosted by JKHub.org." alt="Go to JKG forums, hosted by JKHub.org">Forum</a>
         </div>
@@ -104,6 +105,27 @@
                                 </p>
         
                                 <p id="resourceContributors"></p>
+                            </td>
+                        </tr>
+                    </tbody>
+                    <thead>
+                        <tr>
+                            <th>
+                                <h2>Source Code</h2>
+                            </th>
+                        </tr>
+                    </thead>
+                    <tbody>
+                        <tr>
+                            <td>
+                                <p Title="Get the source code on Github.">
+                                    <br>
+                                    <a href="https://github.com/JKGDevs/JediKnightGalaxies/"><img src="images/media_icons/GitHub-Mark-Light-64px.png"
+                                            height="64" width="64" alt="Github Logo" >
+                                    <br>
+                                        Source Code on Github
+                                    </a>
+                                </p>
                             </td>
                         </tr>
                     </tbody>
