Fixing some navbar resizing issues and shuffling some elements for load optimization.

--- a/404.html
+++ b/404.html
@@ -13,8 +13,6 @@
         <meta name="msapplication-TileColor" content="#010412">
         <meta name="msapplication-TileImage" content="https://wwww.jkgalaxies.net/images/images/JKG_logo-inverted-144x144.png">
         
-        <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
-        <link rel="stylesheet" href="https://www.jkgalaxies.net/styles.css">
     </head>
     <body class="404Page">
         <div id="navbar">
@@ -37,7 +35,7 @@
             <div class="centerdiv">
                 <div class="ErrorJoke" id="ErrorJoke">
                     <h3 id="TextJoke"></h3>
-                    <img id="ImgJoke" src="?" class="img-fluid" alt="Image">
+                    <img id="ImgJoke" src="?" class="img-fluid" alt="Image" width="727" height="312">
                 </div>
             </div>
 
@@ -53,6 +51,9 @@
                 <p><a href="https://www.jkgalaxies.net/legal.html">Legal & Privacy Policy</a></p>
                 <p>&copyJedi Knight Galaxies <script>document.write(new Date().getFullYear());</script></p>
             </div>
+
+            <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" integrity="sha384-JcKb8q3iqJ61gNV9KGb8thSsNjpSL0n8PARn9HuZOnIxN0hoP+VmmDGMN5t9UJ0Z" crossorigin="anonymous">
+            <link async rel="stylesheet" href="https://www.jkgalaxies.net/styles.css">
 
             <script src="https://code.jquery.com/jquery-3.6.0.min.js" integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4=" crossorigin="anonymous"></script>
             <script type="text/javascript">
