--- a/403.html
+++ b/403.html
@@ -13,8 +13,6 @@
         <meta name="msapplication-TileColor" content="#010412">
         <meta name="msapplication-TileImage" content="https://wwww.jkgalaxies.net/images/images/JKG_logo-inverted-144x144.png">
         
-        <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" integrity="sha384-JcKb8q3iqJ61gNV9KGb8thSsNjpSL0n8PARn9HuZOnIxN0hoP+VmmDGMN5t9UJ0Z" crossorigin="anonymous">
-        <link rel="stylesheet" href="https://www.jkgalaxies.net/styles.css">
     </head>
     <body class="403Page">
         <div id="navbar">
@@ -56,6 +54,9 @@
             </p>
         </div>
 		
+        <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" integrity="sha384-JcKb8q3iqJ61gNV9KGb8thSsNjpSL0n8PARn9HuZOnIxN0hoP+VmmDGMN5t9UJ0Z" crossorigin="anonymous">
+        <link async rel="stylesheet" href="https://www.jkgalaxies.net/styles.css">
+
         <script src="https://code.jquery.com/jquery-3.6.0.min.js" integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4=" crossorigin="anonymous"></script>
         <script type="text/javascript">
             window.jQuery || document.write('\x3Cscript type="text/javascript" src="scripts/jquery-3.6.0.min.js">\x3C/script>');
