--- a/about.html
+++ b/about.html
@@ -32,7 +32,7 @@
         </div>
         
         <div class="logo" id="logo">
-            <img src="images/jkg-big_logo-inverted-dropshadow.png" class="img-fluid" alt="Jedi Knight Galaxies logo, click to show menu." align="center">
+            <img src="images/jkg-big_logo-inverted-dropshadow.png" class="img-fluid" alt="Jedi Knight Galaxies logo, click to show menu." align="center" width="768" height="340">
         </div>
 
         <h1>About</h1>
