--- a/index.html
+++ b/index.html
@@ -19,8 +19,7 @@
         <meta name="msapplication-TileColor" content="#010412">
         <meta name="msapplication-TileImage" content="images/JKG_logo-inverted-144x144.png">
 
-        <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" integrity="sha384-JcKb8q3iqJ61gNV9KGb8thSsNjpSL0n8PARn9HuZOnIxN0hoP+VmmDGMN5t9UJ0Z" crossorigin="anonymous">
-        <link async rel="stylesheet" href="styles.css">
+
     </head>
     <body class="IndexPage">
         <div id="navbar">
@@ -28,13 +27,13 @@
             <a href="index.html" title="Home page." alt="Go to JKG home page.">Home</a>
             <a href="download.html" title="Get the game!" alt="Go to JKG download page.">Download</a>
             <a href="about.html" title="Learn more about the game." alt="Go to JKG about page.">About</a>
-            <a href="https://www.jkgalaxies.net/contributors.html" title="Who makes the game?" alt="Contributors page.">Credits</a>
+            <a href="contributors.html" title="Who makes the game?" alt="Contributors page.">Credits</a>
             <a href="https://dark-clan.servegame.com/serverlist_new/serverlist.html#autoRefresh=1&theme=dark&game=jkg&sortBy=humans" title="Check server stats, provided by dark-clan.servegame.com" alt="Go to dark-clan.servegame.com's JKG server listing page.">Servers</a>
             <a href="https://jkhub.org/forum/117-jedi-knight-galaxies/" title="Hosted by JKHub.org." alt="Go to JKG forums, hosted by JKHub.org">Forum</a>
         </div>
         
         <div class="logo" id="logo">
-            <img src="images/jkg-big_logo-inverted-dropshadow.png" class="img-fluid" alt="Jedi Knight Galaxies logo, click to show menu." align="center">
+            <img src="images/jkg-big_logo-inverted-dropshadow.png" class="img-fluid" alt="Jedi Knight Galaxies logo, click to show menu." align="center" width="768" height="340">
         </div>
 
         <div class="maindiv">
@@ -72,10 +71,12 @@
 
         <br>
         <div class="copyright">
-            <p><a href="legal.html">Legal & Privacy Policy</a></p>
+            <p><a href="legal.html" title="View legal and privacy policy statement." alt="Link to legal & privacy policy.">Legal & Privacy Policy</a></p>
             <p>&copyJedi Knight Galaxies <script>document.write(new Date().getFullYear());</script></p>
         </div>
 
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" integrity="sha384-JcKb8q3iqJ61gNV9KGb8thSsNjpSL0n8PARn9HuZOnIxN0hoP+VmmDGMN5t9UJ0Z" crossorigin="anonymous">
+    <link async rel="stylesheet" href="styles.css">
     <script src="https://code.jquery.com/jquery-3.6.0.min.js" integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4=" crossorigin="anonymous"></script>
     <script type="text/javascript">
             window.jQuery || document.write('\x3Cscript type="text/javascript" src="scripts/jquery-3.6.0.min.js">\x3C/script>');
