--- a/download.html
+++ b/download.html
@@ -17,7 +17,8 @@
     <link rel="icon" type="image/png" href="images/JKG_logo-inverted-16x16.png" sizes="16x16">
     <meta name="msapplication-TileColor" content="#010412">
     <meta name="msapplication-TileImage" content="images/JKG_logo-inverted-144x144.png">
-
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" integrity="sha384-JcKb8q3iqJ61gNV9KGb8thSsNjpSL0n8PARn9HuZOnIxN0hoP+VmmDGMN5t9UJ0Z" crossorigin="anonymous">
+    <link async rel="stylesheet" href="styles.css">
 </head>
 
 <body class="DownloadPage">
@@ -88,6 +89,11 @@
             A debian based distribution compiled for ubuntu is available. You may also <a
                 href="https://github.com/JKGDevs/JediKnightGalaxies" alt="Link to Github." target="_blank">build the source code yourself</a> to run it on
             distributions not provided here.
+        </p>
+
+        <p><strong>Is macOS available?</strong><br>
+            A build for macOS Catalina (10.15) is available here, but is not supported.  The game should compile for newer versions of macOS if you wish to <a
+            href="https://github.com/JKGDevs/JediKnightGalaxies" alt="Link to Github." target="_blank">build the source code yourself</a>.  
         </p>
 
         <p><strong>Do I need the map packs?</strong><br>
@@ -314,9 +320,6 @@
         </p>
     </div>
 
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" integrity="sha384-JcKb8q3iqJ61gNV9KGb8thSsNjpSL0n8PARn9HuZOnIxN0hoP+VmmDGMN5t9UJ0Z" crossorigin="anonymous">
-    <link async rel="stylesheet" href="styles.css">
-    
     <script src="https://code.jquery.com/jquery-3.6.0.min.js" integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4=" crossorigin="anonymous"></script>
     <script type="text/javascript">
         window.jQuery || document.write('\x3Cscript type="text/javascript" src="scripts/jquery-3.6.0.min.js">\x3C/script>');
