open patchnotes in a new tab, unify behavior

--- a/download.html
+++ b/download.html
@@ -45,7 +45,7 @@
             title="Assets required for play." alt="Download assets required for play.">Assets</a>
 
         <p>
-            <br><strong><a href="#" class="patchnotes" title="View developer notes about the latest release.">Patch Notes</a></strong><br>
+            <br><strong><a href="#" class="patchnotes" title="View developer notes about the latest release." target="_blank">Patch Notes</a></strong><br>
             <span class="release-info"></span>
         </p>
         <br><br>
@@ -206,7 +206,7 @@
                     </th>
                     <th>
                         <p
-                            title="A file checksum hash (SHA-256) can be used to confirm you have the real, original file and that it hasn’t been corrupted during the download process.  Click link for more info.">
+                            title="A file checksum hash (SHA-256) can be used to confirm you have the real, original file and that it hasn't been corrupted during the download process.  Click link for more info.">
                             <a href="https://www.howtogeek.com/363735/what-is-a-checksum-and-why-should-you-care/" style="color:#c3e8ff;" alt="Link to howtogeek's explanation about checksums." target="_blank">Checksum</a>
                         </p>
                     </th>
@@ -271,7 +271,7 @@
                         </th>
                         <th>
                             <p
-                                title="A file checksum hash (SHA-256) can be used to confirm you have the real, original file and that it hasn’t been corrupted during the download process.  Click link for more info.">
+                                title="A file checksum hash (SHA-256) can be used to confirm you have the real, original file and that it hasn't been corrupted during the download process.  Click link for more info.">
                                 <a
                                     href="https://www.howtogeek.com/363735/what-is-a-checksum-and-why-should-you-care/" style="color:#c3e8ff;" alt="Link to howtogeek's explanation about checksums." target="_blank">Checksum</a>
                             </p>
