--- a/faq.html
+++ b/faq.html
@@ -288,7 +288,7 @@
                 {
                     var release = json; //set release equal to json
                     var version = release.tag_name; //which version the tag is
-                    version = version.replace("Version", "v");
+                    version = version.replace("version", "v");
                     document.getElementById("version").innerHTML = version;
                 });
             });
