copy raw logo data instead of escaped data

--- a/about.html
+++ b/about.html
@@ -404,9 +404,9 @@
             <div class="centerdiv">
                 <br><br><br><br>
                 Copy the HTML below to generate this logo link for your own site:
-                <a href="https://www.jkgalaxies.net/" alt="Jedi Knight Galaxies" title="Jedi Knight Galaxies" target="_blank">
-                    <img src="https://www.jkgalaxies.net/images/JKG_logo-inverted-64x64.png"/>
-                </a>
+<span id="rawtext"><a href="https://www.jkgalaxies.net/" alt="Jedi Knight Galaxies" title="Jedi Knight Galaxies" target="_blank">
+<img src="https://www.jkgalaxies.net/images/JKG_logo-inverted-64x64.png"/>
+</a></span>
                 <br>
 <pre onclick="copyMediaShare()" title="Click to copy code to clipboard." style="text-align: justify"><span id="shareablelogohtml">&lt;a href=&quot;https://www.jkgalaxies.net/&quot; alt=&quot;Jedi Knight Galaxies&quot; title=&quot;Jedi Knight Galaxies&quot; target=&quot;_blank&quot;&gt;
 &lt;img src=&quot;https://www.jkgalaxies.net/images/JKG_logo-inverted-64x64.png&quot;/&gt;
