--- a/about.html
+++ b/about.html
@@ -97,14 +97,14 @@
         </div>
 
         <div class="maindiv" id="description">
-            <p>Jedi Knight Galaxies is a competitive and innovative multiplayer shooter, played out in the Star Wars universe. Currently a full conversion mod, the project was originally based on and modified from Raven Software’s <a href="https://en.wikipedia.org/wiki/Star_Wars_Jedi_Knight:_Jedi_Academy">Jedi Knight: Jedi Academy</a>. Jedi Knight Galaxies is open source and available completely free of charge; however, you will need the original game in order to play. (Jedi Academy is frequently available on <a href="https://store.steampowered.com/app/6020/STAR_WARS_Jedi_Knight__Jedi_Academy/">Steam</a> and <a href="https://www.gog.com/game/star_wars_jedi_knight_jedi_academy">GoG</a> during sales for less than $4). We aim to develop the project into a Large Multiplayer Online game, crossing traditional RPG (role playing game) elements with the fast paced excitement of an FPS (first person shooter).</p>
+            <p>Jedi Knight Galaxies is a competitive and innovative multiplayer shooter, played out in the Star Wars universe. Currently a full conversion mod, the project was originally based on and modified from Raven Software’s <a href="https://en.wikipedia.org/wiki/Star_Wars_Jedi_Knight:_Jedi_Academy" alt="Wikipedia reference" title="Learn about JKA on Wikipedia.">Jedi Knight: Jedi Academy</a>. Jedi Knight Galaxies is open source and <a href="download.html" alt="Link to JKG Downloads" title="Download JKG here." >available completely free of charge</a>; however, you will need the original game in order to play. (Jedi Academy is frequently available on <a href="https://store.steampowered.com/app/6020/STAR_WARS_Jedi_Knight__Jedi_Academy/" alt="Steam link." title="JKA Steam page.">Steam</a> and <a href="https://www.gog.com/game/star_wars_jedi_knight_jedi_academy" alt="GOG link." title="JKA GOG page.">GoG</a> during sales for less than $4). We aim to develop the project into a Large Multiplayer Online game, crossing traditional RPG (role playing game) elements with the fast paced excitement of an FPS (first person shooter).</p>
             <p>The project will be released in phases, each building on to the previous one with more aspects of the final goal. The current Phase, JKG: Versus, was first released September 17th, 2012 as a public beta, showcasing the primary FPS elements of the game. Subsequent updates and versions have been produced since then. As development progresses, sandbox environments will be added, initial RPG elements will appear, and player vs. enemy combat will be implemented into the faction oriented gameplay. Improved dialog and cinematic features along with skills, powers, and more aspects that belong in a Role-Playing Game will be developed, set between the events of Episode IV: A New Hope and Episode III: Revenge of the Sith. Finally, the full-fledged JKG: LMO takes the experience to a much grander level.</p>
-            <p>The game is a much loved hobby project supported by its <a href="contributors.html">community and developers</a> who work on it in their freetime, contribution is encouraged and newbies are welcome. Originally founded by a group of Jedi Academy modders led by Jake (now retired), the project has since been in and out of development since 2008. The current development team comes from a variety of backgrounds, countries, and age, united by our desire to make a great game.</p>
+            <p>The game is a much loved hobby project supported by its <a href="contributors.html" alt="contributors page" title="JKG Credits.">community and developers</a> who work on it in their freetime, contribution is encouraged and newbies are welcome. Originally founded by a group of Jedi Academy modders led by Jake (now retired), the project has since been in and out of development since 2008. The current development team comes from a variety of backgrounds, countries, and age, united by our desire to make a great game.</p>
             <p>Welcome to Jedi Knight Galaxies, where we break the limits!</p>
         </div>
 
         <div class="centerdiv" id="faq">
-            <h3>Questions?  Check our <a href="faq.html" title="Query: Is there something you want to know?">FAQ</a>.</h3>
+            <h3>Questions?  Check our <a href="faq.html" alt="FAQ page." title="Query: Is there something you want to know?">FAQ</a>.</h3>
         </div>
 
         <div class="centerdiv">
@@ -268,7 +268,7 @@
 
         <!--Modal-->
         <div id="myModal" class="modal">
-            <span class="close cursor" onclick="closeModal()" title="Close.">&times;</span>
+            <span id="myModalCloser" class="close cursor" onclick="closeModal()" title="Close.">&times;</span>
             <div class="modal-content">
                 <div class="mySlides">
                   <div class="numbertext">1 / 16</div>
@@ -390,7 +390,7 @@
                 <a href="https://www.moddb.com/mods/jkgalaxies" title="View Jedi Knight Galaxies on ModDB". target="_blank"><img src="images/media_icons/ModDB-Mark-64px.png" alt="Jedi Knight Galaxies ModDB" class="img-fluid"/></a>
             </p>
 
-            <p class="socialblock" title="Click to get generate JKG link." onclick="openModalMediaShare();">
+            <p class="socialblock" alt="Click to get generate JKG link." title="Click to get generate JKG link." onclick="openModalMediaShare();">
                 Share JKG<br>
                 <img src="images/JKG_logo-inverted-64x64.png" alt="Jedi Knight Galaxies Website" class="img-fluid"/>
             </p>
@@ -399,8 +399,8 @@
         <!-- Modal content -->
         <div id="MediaShareModal" class="modal">
         <div class="modal-content">
-            <br><br><br><br> <br><br><br><br>
-            <span class="close cursor" onclick="closeModalMediaShare()" title="Close.">&times;</span>
+            <br>
+            <span id="MediaModalCloser" class="close cursor" onclick="closeModalMediaShare()" title="Close.">&times;</span>
             <div class="centerdiv">
                 <br><br><br><br>
                 Copy the HTML below to generate this logo link for your own site:
