Adding meta tags for social media to main pages

--- a/legal.html
+++ b/legal.html
@@ -8,6 +8,12 @@
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <meta name="Language" content="English">
 
+        <meta property="og:type" content="website">
+        <meta property="og:url" content="https://www.jkgalaxies.net/">
+        <meta property="og:title" content="Jedi Knight Galaxies | Legal">
+        <meta property="og:description" content="Jedi Knight Galaxies, a free open-source mod for Jedi Academy.">
+        <meta property="og:image" content="images/JKG_logo-inverted.png">
+
         <link rel="icon" href="images/JKG_logo-inverted.ico" type="image/x-icon">
         <link rel="apple-touch-icon-precomposed" href="images/JKG_logo-inverted.png">
         <link rel="icon" type="image/png" href="images/JKG_logo-inverted-64x64.png" sizes="64x64">
