minor changes to meta information for primary pages, slight update to legal page, more consistent formatting on contributor page, and update to news feed

--- a/about.html
+++ b/about.html
@@ -8,6 +8,7 @@
         <meta name="Keywords" content="JKG, Jedi Knight Galaxies, jkagalaxies, jkgalaxies, jedi knight, game, star wars, star wars online, star wars multiplayer, star wars multiplayer game, star wars game, star wars mod">
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <meta name="Language" content="English">
+        <meta name="robots" content="follow,index">
 
         <meta property="og:type" content="website">
         <meta property="og:url" content="https://www.jkgalaxies.net/">
