--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <meta name="Language" content="English">
 		<meta name="google-site-verification" content="4DOJbomq9y00AL8HF-t8-JMZ66JHltuDpvhGTChLak4" />
+        <meta name="robots" content="follow,index">
 
         <meta property="og:type" content="website">
         <meta property="og:url" content="https://www.jkgalaxies.net/">
