--- a/download.html
+++ b/download.html
@@ -9,6 +9,7 @@
     <meta name="Keywords" content="JKG, Jedi Knight Galaxies, jkagalaxies, jkgalaxies, jedi knight, game, star wars, star wars online, star wars multiplayer, star wars multiplayer game, star wars game, jedi academy, star wars mod, download JKG, download, total conversion mod">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="Language" content="English">
+    <meta name="robots" content="follow,index">
 
     <meta property="og:type" content="website">
     <meta property="og:url" content="https://www.jkgalaxies.net/">
