adding placeholder loading information for when javascript doesn't fire off on the download page

--- a/download.html
+++ b/download.html
@@ -53,7 +53,7 @@
 
         <p>
             <br><strong><a href="#" class="patchnotes" title="View developer notes about the latest release." target="_blank">Patch Notes</a></strong><br>
-            <span class="release-info"></span>
+            <span class="release-info">[Loading...]<br><a href="javascript:location.reload();">&#x21bb; <strong>Refresh the page</strong></a> if you see this message.</span>
         </p>
         <br><br>
         <div><a id="downloadMapOneBtn" href="https://jkhub.org/files/file/2652-jedi-knight-galaxies-map-bundle-1/"
@@ -133,7 +133,7 @@
         <p>First, navigate to your Jedi Academy install's GameData folder. The GameData
             folder is typically in the following location if you have Steam: 'SteamLibrary\steamapps\common\Jedi
             Academy\GameData'. Other types of installs will have a similar location. </p>
-        <p>Then from the downoaded zip binary, drag and drop the jkgalaxies directory (the one the readme is alongside) into
+        <p>Then from the downloaded zip binary, drag and drop the jkgalaxies directory (the one the readme is alongside) into
             Jedi Academy's GameData folder.
             If you have a previous installation of JKG, just replace the jkgalaxies directory with the one in the zip (if you
             have a really old version of JKG, you'll likely want to just install from scratch). Your directory structure should
@@ -188,7 +188,7 @@
             title="Assets required for play."  alt="Download assets required for play.">Assets</a>
         <p>
             <strong><a href="#" class="patchnotes" title="View developer notes about the latest release." alt="Link to patch notes." target="_blank">Patch Notes</a></strong><br>
-            <span class="release-info"></span><br>
+            <span class="release-info">[Loading...]<br><a href="javascript:location.reload();">&#x21bb; <strong>Refresh the page</strong></a> if you see this message.</span><br>
             <span id="download-count">Total Downloads: </span>
         </p>
 
@@ -253,7 +253,7 @@
                 title="Assets required for play."  alt="Download test assets required for play.">Assets</a>
             <p>
                 <strong><a href="#" class="test-patchnotes" title="View developer notes about the latest release."  alt="Link to test patch notes." target="_blank">Patch Notes</a></strong><br>
-                <span class="test-release-info"></span><br>
+                <span class="test-release-info">[Loading...]<br><a href="javascript:location.reload();">&#x21bb; <strong>Refresh the page</strong></a> if you see this message.</span><br>
                 <span id="test-download-count">Total Downloads: </span>
             </p>
 
