updating copyright claim

--- a/contributors.html
+++ b/contributors.html
@@ -137,7 +137,10 @@
                     <thead>
                         <tr>
                             <th>
-                                <h4>JEDI KNIGHT GALAXIES AND ITS CONTENTS ARE NOT MADE, DISTRIBUTED, OR SUPPORTED BY ACTIVISION, RAVEN, DISNEY, OR LUCASARTS ENTERTAINMENT COMPANY LLC. ELEMENTS TM & (c) LUCASARTS ENTERTAINMENT COMPANY LLC AND/OR ITS LICENSORS.</h4>
+                                <h4>
+                                    JEDI KNIGHT GALAXIES AND ITS CONTENTS ARE NOT MADE, DISTRIBUTED, OR SUPPORTED BY ACTIVISION, RAVEN SOFTWARE, DISNEY, OR LUCASARTS ENTERTAINMENT COMPANY LLC. ELEMENTS TM & © LUCASARTS ENTERTAINMENT COMPANY LLC AND/OR ITS LICENSORS.  
+                                    ALL LOGOS, IMAGES AND ANY OTHER TYPES OF MATERIALS ARE THE PROPERTY OF THEIR RESPECTFUL OWNERS.
+                                </h4>
                             </th>
                         </tr>
                     </thead>
