--- a/legal.html
+++ b/legal.html
@@ -111,10 +111,9 @@
                 events,
                 is purely coincidental.<br><br>
     
-                JEDI KNIGHT GALAXIES AND ITS CONTENTS ARE NOT MADE, DISTRIBUTED, OR SUPPORTED BY ACTIVISION, RAVEN, DISNEY,
-                OR LUCASARTS
-                ENTERTAINMENT COMPANY LLC. ELEMENTS TM & (c) LUCASARTS ENTERTAINMENT COMPANY LLC AND/OR ITS
-                LICENSORS.<br><br>
+                JEDI KNIGHT GALAXIES AND ITS CONTENTS ARE NOT MADE, DISTRIBUTED, OR SUPPORTED BY ACTIVISION, RAVEN SOFTWARE, DISNEY, 
+                OR LUCASARTS ENTERTAINMENT COMPANY LLC. ELEMENTS TM & © LUCASARTS ENTERTAINMENT COMPANY LLC AND/OR ITS LICENSORS.  
+                ALL LOGOS, IMAGES AND ANY OTHER TYPES OF MATERIALS ARE THE PROPERTY OF THEIR RESPECTFUL OWNERS.<br><br>
     
                 These terms may be altered by the official development team from time to time to reflect changes in
                 development and
