--- a/contributors.html
+++ b/contributors.html
@@ -138,8 +138,11 @@
                         <tr>
                             <th>
                                 <h4>
-                                    JEDI KNIGHT GALAXIES AND ITS CONTENTS ARE NOT MADE, DISTRIBUTED, OR SUPPORTED BY ACTIVISION, RAVEN SOFTWARE, DISNEY, OR LUCASARTS ENTERTAINMENT COMPANY LLC. ELEMENTS TM & © LUCASARTS ENTERTAINMENT COMPANY LLC AND/OR ITS LICENSORS.  
-                                    ALL LOGOS, IMAGES AND ANY OTHER TYPES OF MATERIALS ARE THE PROPERTY OF THEIR RESPECTFUL OWNERS.
+                                    	JEDI KNIGHT GALAXIES AND ITS CONTENTS ARE NOT MADE, DISTRIBUTED, OR SUPPORTED BY ACTIVISION PUBLISHING, INC., RAVEN SOFTWARE, 
+					OR LUCASARTS ENTERTAINMENT COMPANY, LLC. ELEMENTS™ & © LUCASFILM LTD.™ & DISNEY, INC.™ AND/OR ITS LICENSORS. STAR WARS®, 
+					JEDI®, & JEDI KNIGHT® ARE REGISTERED TRADEMARKS OF LUCASFILM LTD™ AND WALT DISNEY, INC.™ STAR WARS®, JEDI®, & JEDI KNIGHT® 
+					ARE REGISTERED TRADEMARKS OF LUCASFILM LTD™ & DISNEY, INC.™ ALL LOGOS, IMAGES AND ANY OTHER TYPES OF MATERIALS ARE THE PROPERTY 
+					OF THEIR RESPECTFUL OWNERS.
                                 </h4>
                             </th>
                         </tr>
